2005-03-04 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GenericFilter.py (HasAttribute.apply): Make work when no value
	is given; (HasFamilyAttribute.apply): Make work when no value is given.

2005-03-03 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GenericFilter.py (HasAttribute.apply): Fix the rule.
	(HasFamilyAttribute.apply): Fix the rule.
	* src/Marriage.py (on_update_attr_clicked,on_add_attr_clicked):
	Pass the window to the attribute editor.

2005-03-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ChooseParents.py: use integers instead of strings for 
	relationship types
	* src/PedView.py: use integers instead of strings for 
	relationship types
	* src/ReadGedcom.py: use integers instead of strings for 
	relationship types
	* src/ReadXML.py: use integers instead of strings for 
	relationship types
	* src/RelLib.py: use integers instead of strings for 
	relationship types
	* src/SelectChild.py: use integers instead of strings for 
	relationship types
	* src/WriteXML.py: use integers instead of strings for 
	relationship types
	* src/const.py.in: use integers instead of strings for 
	relationship types
	* src/gramps_main.py: call database update function
	* src/GrampsBSDDB.py: add database upgrade function
	* src/GrampsDbBase.py: add database upgrade function
	* src/Marriage.py: fix lds menu
	* src/AddSpouse.py: use ComboBox instead of ComboBoxEntry for
	handling child/parent relationships
	* src/ChooseParents.py: use ComboBox instead of ComboBoxEntry for
	handling child/parent relationships
	* src/FamilyView.py: use ModifyParents instead of EditRel
	* src/SelectChild.py: use ComboBox instead of ComboBoxEntry for
	handling child/parent relationships. Remove EditRel class
	* src/gramps.glade: use ComboBox instead of ComboBoxEntry for
	handling child/parent relationships, delete editrel

2005-03-02 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DbPrompter.py (ImportDbPrompter.chooser): Explicitly
	import XML and GEDCOM.